==> matsujirushi/nf-interpreter/targets/FreeRTOS/RASPI/_nanoCLR/System.IO.Ports/sys_io_ser_native_System_IO_Ports_SerialPort.cpp <==
#include "sys_io_ser_native.h"
#include "sys_io_ser_native_target.h"
#include "board.h"
#include "hardware/uart.h"
#include "hardware/irq.h"
#include "hardware/gpio.h"

static void vWEvent(void *pvParameters)
{
    uint32_t ulNotifiedValue;
    uint8_t *uartNum_p = (uint8_t *)pvParameters;
    uint8_t uartNum = *uartNum_p;
    NF_PAL_UART *palUart = Uart_PAL[uartNum - 1];

    while (1)
    {
        xTaskNotifyWait(
            pdFALSE,          // Don't clear bits on entry.
            0xffffffff,       // Clear all bits on exit.
            &ulNotifiedValue, // Stores the notified value.
            portMAX_DELAY);

        if ((ulNotifiedValue & 0x01) != 0)
        {
            uart_write_blocking(palUart->uart, (const uint8_t *)palUart->TxBuffer, (size_t)palUart->TxOngoingCount);
            Events_Set(SYSTEM_EVENT_FLAG_COM_OUT);
        }
    }
}

HRESULT Library_sys_io_ser_native_System_IO_Ports_SerialPort::NativeInit___VOID(CLR_RT_StackFrame &stack)
{
    NANOCLR_HEADER();

    BaseType_t xReturned;
    NF_PAL_UART *palUart;
    int32_t bufferSize;
    uint8_t watchChar;
    uint irq_no;
    bool flag;

    // get a pointer to the managed object instance and check that it's not NULL
    CLR_RT_HeapBlock *pThis = stack.This();
    FAULT_ON_NULL(pThis);

    // Choose the driver for this SerialDevice
    switch ((int)pThis[FIELD___portIndex].NumericByRef().s4)
    {
#if defined(NF_SERIAL_COMM_RP2040_UART_USE_UART1) && (NF_SERIAL_COMM_RP2040_UART_USE_UART1 == TRUE)
        case 1:
            // Init_UART1();
            Uart1_PAL.uart = uart0;
            Uart1_PAL.uart_num = 1;
            palUart = &Uart1_PAL;
            break;
#endif
#if defined(NF_SERIAL_COMM_RP2040_UART_USE_UART2) && (NF_SERIAL_COMM_RP2040_UART_USE_UART2 == TRUE)
        case 2:
            // Init_UART2();
            Uart2_PAL.uart = uart1;
            Uart2_PAL.uart_num = 2;
            palUart = &Uart2_PAL;
            break;
#endif
#if defined(NF_SERIAL_COMM_RP2040_UART_USE_UART3) && (NF_SERIAL_COMM_RP2040_UART_USE_UART3 == TRUE)
        case 3:
            // Init_UART3();
            Uart3_PAL.uart = uart1;
            Uart3_PAL.uart_num = 3;
            palUart = &Uart3_PAL;
            break;
#endif
#if defined(NF_SERIAL_COMM_RP2040_UART_USE_UART4) && (NF_SERIAL_COMM_RP2040_UART_USE_UART4 == TRUE)
        case 4:
            // Init_UART4();
            Uart4_PAL.uart = uart0;
            Uart4_PAL.uart_num = 4;
            palUart = &Uart4_PAL;
            break;
#endif
#if defined(NF_SERIAL_COMM_RP2040_UART_USE_UART5) && (NF_SERIAL_COMM_RP2040_UART_USE_UART5 == TRUE)
        case 5:
            // Init_UART5();
            Uart5_PAL.uart = uart0;
            Uart5_PAL.uart_num = 5;
            palUart = &Uart5_PAL;
            break;
#endif
        default:
            // this COM port is not valid
            // NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);
            break;
    }

    // alloc buffer memory
    bufferSize = pThis[FIELD___bufferSize].NumericByRef().s4;
    palUart->RxBuffer = (uint8_t *)platform_malloc(bufferSize * sizeof(uint8_t));

    // sanity check
    if (palUart->RxBuffer == NULL)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_OUT_OF_MEMORY);
    }

    // Initialize RX buffer
    palUart->RxRingBuffer.Initialize(palUart->RxBuffer, bufferSize);
    palUart->RxBytesToRead = 0;

    // get watch character
    watchChar = pThis[FIELD___watchChar].NumericByRef().u1;

    // set watch char, if set
    if (watchChar != 0)
    {
        palUart->WatchChar = watchChar;
    }

    // now all the rest
    palUart->TxOngoingCount = 0;
    palUart->NewLineChar = 0;
    palUart->config.baudrate = 115200;
    flag = rp2040_uart_init(palUart);
    if (!flag) {
        NANOCLR_SET_AND_LEAVE(CLR_E_BUSY);
    }
    // Get default config structure for initializing given UART peripheral and enable TX, RX
    // Initialize UART peripheral with default config
    // And set up and enable the interrupt handlers
    irq_no = rp2040_uart_irg_no(palUart);
    irq_set_exclusive_handler(irq_no, rp2040_uart_int_rx);
    irq_set_enabled(irq_no, true);
    // Now enable the UART to send interrupts - RX only
    uart_set_irq_enables(palUart->uart, true, false);
    // Create idle task waiting for read/write.
    xReturned = xTaskCreate(
        vREvent,
        "UART Read Event",
        configMINIMAL_STACK_SIZE,
        (void *)palUart,
        configMAX_PRIORITIES - 1,
        &palUart->xRTaskToNotify);
    if (xReturned == errCOULD_NOT_ALLOCATE_REQUIRED_MEMORY)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_OUT_OF_MEMORY);
    }

    xReturned = xTaskCreate(
        vWEvent,
        "UART Write Event",
        configMINIMAL_STACK_SIZE,
        (void *)palUart,
        configMAX_PRIORITIES,
        &palUart->xWTaskToNotify);

    if (xReturned == errCOULD_NOT_ALLOCATE_REQUIRED_MEMORY)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_OUT_OF_MEMORY);
    }

    NANOCLR_NOCLEANUP();
}

HRESULT Library_sys_io_ser_native_System_IO_Ports_SerialPort::NativeConfig___VOID(CLR_RT_StackFrame &stack)
{
    NANOCLR_HEADER();

    bool flag;
    NF_PAL_UART *palUart = NULL;


    // get a pointer to the managed object instance and check that it's not NULL
    CLR_RT_HeapBlock *pThis = stack.This();
    FAULT_ON_NULL(pThis);

    // Choose the driver for this SerialDevice
    palUart = GetUartPAL((int)pThis[FIELD___portIndex].NumericByRef().s4);
    if (palUart == NULL)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);
    }
    // Check RS485 mode is not selected as currently not supported
    if ((SerialMode)pThis[FIELD___mode].NumericByRef().s4 != SerialMode_Normal)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_NOTIMPL);
    }
    // baudrate
    palUart->config.baudrate = (uint32_t)pThis[FIELD___baudRate].NumericByRef().s4;
    uart_set_baudrate (palUart->uart, palUart->config.baudrate);
    // databit
    palUart->config.databit = (uint32_t)pThis[FIELD___dataBits].NumericByRef().s4;
    // stopbit
    switch ((StopBits)pThis[FIELD___stopBits].NumericByRef().s4)
    {
        case StopBits_One:
            palUart->config.stopbit = 1;
            break;
        case StopBits_OnePointFive:
            palUart->config.stopbit = 1;
            break;
        case StopBits_Two:
            palUart->config.stopbit = 2;
            break;
    }
    // parity
    switch ((Parity)pThis[FIELD___parity].NumericByRef().s4)
    {
        case Parity_Even:
            palUart->config.parity = UART_PARITY_EVEN;
            break;
        case Parity_None:
            palUart->config.parity = UART_PARITY_NONE;
            break;
        case Parity_Odd:
            palUart->config.parity = UART_PARITY_ODD;
            break;
    }
    uart_set_format(palUart->uart, palUart->config.databit, palUart->config.stopbit, palUart->config.parity);
    flag = rp2040_uart_init(palUart);
    if (!flag) {
        NANOCLR_SET_AND_LEAVE(CLR_E_BUSY);
    }
    // null pointers and vars
    pThis = NULL;

    NANOCLR_NOCLEANUP();
}
