==> nanoframework/nf-interpreter/targets/FreeRTOS/NXP/_nanoCLR/System.IO.Ports/sys_io_ser_native_System_IO_Ports_SerialPort.cpp <==
#include "sys_io_ser_native_target.h"

static void vWEvent(void *pvParameters)
{
    uint32_t ulNotifiedValue;
    uint8_t *uartNum_p = (uint8_t *)pvParameters;
    uint8_t uartNum = *uartNum_p;
    NF_PAL_UART *palUart = Uart_PAL[uartNum];

    while (1)
    {
        xTaskNotifyWait(
            pdFALSE,          // Don't clear bits on entry.
            0xffffffff,       // Clear all bits on exit.
            &ulNotifiedValue, // Stores the notified value.
            portMAX_DELAY);

        if ((ulNotifiedValue & 0x01) != 0)
        {
            LPUART_WriteBlocking(lpuart_bases[uartNum], palUart->xfer.data, palUart->xfer.dataSize);
            Events_Set(SYSTEM_EVENT_FLAG_COM_OUT);
        }
    }
}

HRESULT Library_sys_io_ser_native_System_IO_Ports_SerialPort::NativeInit___VOID(CLR_RT_StackFrame &stack)
{
    NANOCLR_HEADER();

    status_t status = 0;
    uint8_t uartNum = 0;
    lpuart_config_t *config = NULL;
    LPUART_Type *base = NULL;
    NF_PAL_UART *palUart = NULL;
    BaseType_t xReturned;
    int32_t bufferSize;

    CLR_RT_HeapBlock *pThis = stack.This();
    FAULT_ON_NULL(pThis);

    uartNum = pThis[FIELD___portIndex].NumericByRef().s4;
    config = &Uart_PAL[uartNum]->uartCfg;
    base = lpuart_bases[uartNum];

    // Quit if parameters or device is invalid or out of range
    if (uartNum >= (sizeof(Uart_PAL) / sizeof(Uart_PAL[0])) || config == NULL || base == NULL)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);
    }

    palUart = Uart_PAL[uartNum];

    // Allocate memory for RX circular buffer
    bufferSize = pThis[FIELD___bufferSize].NumericByRef().s4;

    palUart->RxBuffer = (uint8_t *)platform_malloc(bufferSize * sizeof(uint8_t));

    if (palUart->RxBuffer == NULL)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_OUT_OF_MEMORY);
    }

    // Initialize RX buffer
    palUart->RxRingBuffer.Initialize(palUart->RxBuffer, bufferSize);
    palUart->RxBytesToRead = 0;

    // now all the rest
    palUart->TxOngoingCount = 0;
    palUart->WatchChar = 0;
    palUart->NewLineChar = 0;

    // Get default config structure for initializing given UART peripheral and enable TX, RX
    LPUART_GetDefaultConfig(config);
    config->enableRx = true;
    config->enableTx = true;

    // FreeRTOS Task needs parameter data survive after this function finish, so write this parameter to Uart_PAL
    // structure.
    palUart->uartNum = uartNum;

    // Enable RX interrupts
    EnableIRQ((IRQn_Type)(19 + uartNum));
    NVIC_SetPriority((IRQn_Type)(19 + uartNum), UART_INTERRUPT_PRIO);

    // Initialize UART peripheral with default config
    status = LPUART_Init(base, config, GetSrcFreq());
    if (status != kStatus_Success)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_IO);
    }

    // Create idle task waiting for read/write.
    xReturned = xTaskCreate(
        vREvent,
        "UART Read Event",
        configMINIMAL_STACK_SIZE,
        (void *)palUart,
        configMAX_PRIORITIES - 1,
        &palUart->xRTaskToNotify);
    if (xReturned == errCOULD_NOT_ALLOCATE_REQUIRED_MEMORY)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_OUT_OF_MEMORY);
    }

    xReturned = xTaskCreate(
        vWEvent,
        "UART Read Event",
        configMINIMAL_STACK_SIZE,
        (void *)palUart,
        configMAX_PRIORITIES,
        &palUart->xWTaskToNotify);

    if (xReturned == errCOULD_NOT_ALLOCATE_REQUIRED_MEMORY)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_OUT_OF_MEMORY);
    }

    NANOCLR_NOCLEANUP();
}

HRESULT Library_sys_io_ser_native_System_IO_Ports_SerialPort::NativeConfig___VOID(CLR_RT_StackFrame &stack)
{
    NANOCLR_HEADER();

    status_t status = 0;
    uint8_t uartNum = 0;
    lpuart_config_t *config = NULL;
    LPUART_Type *base = NULL;

    CLR_RT_HeapBlock *pThis = stack.This();
    FAULT_ON_NULL(pThis);

    uartNum = pThis[FIELD___portIndex].NumericByRef().s4;
    config = &Uart_PAL[uartNum]->uartCfg;
    base = lpuart_bases[uartNum];

    if (uartNum >= (sizeof(Uart_PAL) / sizeof(Uart_PAL[0])) || config == NULL || base == NULL)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_IO);
    }

    // Check RS485 mode is not selected as currently not supported
    if ((SerialMode)pThis[FIELD___mode].NumericByRef().s4 != SerialMode_Normal)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_NOTIMPL);
    }

    config->baudRate_Bps = (uint32_t)pThis[FIELD___baudRate].NumericByRef().s4;

    switch (pThis[FIELD___dataBits].NumericByRef().s4)
    {
        default:
            NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);
            break;
        case 7:
            config->dataBitsCount = kLPUART_SevenDataBits;
            break;
        case 8:
            config->dataBitsCount = kLPUART_EightDataBits;
            break;
    }

    switch (pThis[FIELD___parity].NumericByRef().s4)
    {
        default:
            NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);
            break;
        case Parity_None:
            config->parityMode = kLPUART_ParityDisabled;
            break;
        case Parity_Even:
            config->parityMode = kLPUART_ParityEven;
            break;
        case Parity_Odd:
            config->parityMode = kLPUART_ParityOdd;
            break;
    }

    switch ((StopBits)pThis[FIELD___stopBits].NumericByRef().s4)
    {
        default:
            NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);
            break;
        case StopBits_One:
            config->stopBitCount = kLPUART_OneStopBit;
            break;
        case StopBits_Two:
            config->stopBitCount = kLPUART_TwoStopBit;
            break;
    }

    // write config to UART peripheral
    status = LPUART_Init(base, config, GetSrcFreq());
    if (status != kStatus_Success)
    {
        NANOCLR_SET_AND_LEAVE(CLR_E_IO);
    }

    // Enable interrupts after setting configuration
    // Disable transmitter and receiver
    base->CTRL &= ~(1U << 19);
    base->CTRL &= ~(1U << 18);
    // Enable receiver interrupt
    base->CTRL |= 1U << LPUART_CTRL_RIE_SHIFT;
    // Enable receiver ovverun interrupt
    base->CTRL |= 1U << LPUART_CTRL_ORIE_SHIFT;
    // Renable transmitter and receiver
    base->CTRL |= 1U << 19;
    base->CTRL |= 1U << 18;

    NANOCLR_NOCLEANUP();
}
